--- a/src/components/stylesheet.css
+++ b/src/components/stylesheet.css
@@ -38,6 +38,14 @@ table, th, td{
     border: 1px solid;
 }
 
+.transactionsTable {
+    margin-top: 50px;
+    margin-left: auto;
+    margin-right: auto;
+    border: 1px solid #999;
+    border-collapse: collapse;
+}
+
 input{
     display: inline-block;
     float: none;
@@ -60,3 +68,10 @@ select{
 	width: 95%;
 	}
 }
+
+.statusTypeSelector {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
+    max-width: fit-content;
+    }
