adding display claims table and other functionality

--- a/src/components/stylesheet.css
+++ b/src/components/stylesheet.css
@@ -33,6 +33,10 @@ button:hover{
     background-color: #24612c;
 }
 
+#list{
+    display:none;
+}
+
 table, th, td{
     background-color: #ffffcc;
     border: 1px solid;
