--- a/src/components/stylesheet.css
+++ b/src/components/stylesheet.css
@@ -65,6 +65,28 @@ select{
     width: 500px;
 }
 
+.property{
+    border: 1px solid #ccc;
+    width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.motor{
+    border: 1px solid #ccc;
+    width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.pet{
+    border: 1px solid #ccc;
+    width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
     .container{
         width: 767px
