--- a/src/components/stylesheet.css
+++ b/src/components/stylesheet.css
@@ -91,6 +91,13 @@ select{
     margin-right: auto;
 }
 
+.termsofuse{
+    border: 1px solid #ccc;
+    width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
     .container{
