add new claim updates

--- a/src/components/stylesheet.css
+++ b/src/components/stylesheet.css
@@ -118,3 +118,10 @@ select{
     margin-top: 50px;
     max-width: fit-content;
     }
+
+    .transactionsClaimsSelector {
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 50px;
+        max-width: fit-content;
+    }
